Bug 461422 - Custom keywords for the Terminate Applications runner require restarting KRunner to take effect
Summary: Custom keywords for the Terminate Applications runner require restarting KRun...
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.26.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-04 13:53 UTC by Etienne
Modified: 2022-11-09 20:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Etienne 2022-11-04 13:53:26 UTC
SUMMARY
When I try to change key words in krunner to custom ones, it doesn't seem to take it into account as the old key word is still calling the function but the new one doesn't.

STEPS TO REPRODUCE
1. Change the key word of a Krunner function (ex: kill) to a custom one
2. Open Krunner
3. Type the custom key word
4. The function is not called

OBSERVED RESULT
Krunner isn't showing the options to kill the apps (for example) when I type my custom key word.

EXPECTED RESULT
Krunner should show me the options to kill the apps when I type my custom key word

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: kernel 6.0.6-arch1-1 (x64)
KDE Plasma Version: 5.26.2
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.7
Comment 1 Nate Graham 2022-11-04 18:22:08 UTC
Does it work after you reboot or restart krunner with `krunner --replace`?
Comment 2 Etienne 2022-11-04 18:39:41 UTC
Your command worked well but I really don't understand as I already had this issue for some months and I restarted my computer daily...
Comment 3 Bug Janitor Service 2022-11-05 07:11:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1237
Comment 4 Alexander Lohnau 2022-11-09 20:24:29 UTC
Git commit b9602cad04e8b3f35585a2bad0223bf89f58dd29 by Alexander Lohnau.
Committed on 09/11/2022 at 20:23.
Pushed by alex into branch 'master'.

kcms/runners: Fix org.kde.kconfig.notify DBus signal getting wrong plugin id

Because we do not have metadata in most KCMs, we use the metadata from the plugin.
If we do not explicitly define a pluginId, it gets derived from the filename.
Meaning the pluginId of the KCM is different from the pluginId of the runner.

However, when the RunnerManager receives this signal, it looks matches the runner pluginId
and the pluginId of the KCM.

M  +3    -3    kcms/runners/plasmasearch/kcm.cpp
M  +1    -1    kcms/runners/plasmasearch/kcm.h
M  +1    -1    kcms/runners/plasmasearch/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/commit/b9602cad04e8b3f35585a2bad0223bf89f58dd29
Comment 5 Alexander Lohnau 2022-11-09 20:25:18 UTC
Git commit ea04ba432599e3012dc2f31829c707600f0e2638 by Alexander Lohnau.
Committed on 09/11/2022 at 20:25.
Pushed by alex into branch 'Plasma/5.26'.

kcms/runners: Fix org.kde.kconfig.notify DBus signal getting wrong plugin id

Because we do not have metadata in most KCMs, we use the metadata from the plugin.
If we do not explicitly define a pluginId, it gets derived from the filename.
Meaning the pluginId of the KCM is different from the pluginId of the runner.

However, when the RunnerManager receives this signal, it looks matches the runner pluginId
and the pluginId of the KCM.


(cherry picked from commit b9602cad04e8b3f35585a2bad0223bf89f58dd29)

M  +3    -3    kcms/runners/plasmasearch/kcm.cpp
M  +1    -1    kcms/runners/plasmasearch/kcm.h
M  +1    -1    kcms/runners/plasmasearch/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/commit/ea04ba432599e3012dc2f31829c707600f0e2638